# ruzule

./: .gitignore  Cargo.toml  README.md
frameworks/: zxPluginsInject.dylib
scripts/: bundle.sh  release.sh
src/: app_bundle.rs  cgen.rs  cli.rs  cyan_config.rs  deb.rs  error.rs  executable.rs  frameworks.rs  ipa.rs  lib.rs  macho.rs  main.rs  plist_ext.rs  sign.rs
src/types/: app_bundle.rs  executable.rs  mod.rs  plist_wrapper.rs
src/utils/: cyan.rs  deb.rs  ipa.rs  mod.rs  tools.rs
