[package]
name = "ruzule"
version = "0.1.0"
edition = "2021"
description = "The best iOS app injector (and more), rewritten in Rust"
license = "Unlicense"
repository = "https://github.com/asdfzxcvbn/ruzule"
keywords = ["ios", "ipa", "inject", "tweak", "jailbreak"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.55", features = ["derive"] }
goblin = "0.10.4"
image = "0.24.9"
lazy_static = "1.5.0"
plist = "1.8.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.24.0"
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4"] }
walkdir = "2.5.0"
zip = "7.2.0"
