[package]
name = "ruzule"
version = "0.1.0"
edition = "2021"
description = "iOS app injector and modifier - Rust rewrite of pyzule-rw/cyan"
license = "Unlicense"
repository = "https://github.com/lquartararo/ruzule"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1.7"

# Archive handling
zip = { version = "2", default-features = false, features = ["deflate"] }
ar = "0.9"
tar = "0.4"
flate2 = "1"
xz2 = "0.1"

# Mach-O parsing and manipulation
goblin = "0.9"
apple-codesign = { git = "https://github.com/PlumeImpactor/plume-apple-platform-rs", package = "apple-codesign", default-features = false }

# Image processing (for icon changing)
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "ico"] }

# Utilities
tempfile = "3"
walkdir = "2"
glob = "0.3"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"

sha2 = "0.10"
hex = "0.4"

# Async (optional, for future use)
# tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
